add readme detail

--- a/toys-datasets/boston/README
+++ b/toys-datasets/boston/README
@@ -1,4 +1,5 @@
 for some reason,my computer cannot recognize pip or python..
+cannot use python --version or pip install matplotlib/pandas/numpy
+i just code based on the class5 notebook
 
-
-need to try it on class
+and try to run it on class
